--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1757,7 +1757,7 @@ h4.vol {
   background: #149f6e;
 }
 #footer .copyright {
-  border-top: 1px solid #010479;
+  border-top: 1px solid #eacc0d;
   text-align: center;
   padding-top: 30px;
 }
