--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,6 +11,8 @@
 body {
   font-family: 'Open Sans', sans-serif;
   color: #444444;
+  margin: 0;
+  padding: 0;
 }
 
 a {
@@ -1805,4 +1807,7 @@ h4.vol {
   position: sticky;
   bottom: 10px;
   margin-left: 10px;
+  margin-top: -100px;
+  /* border: 1px solid black; */
+  width: max-content;
 }
