--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1977,3 +1977,13 @@ h4.vol {
 
 
 
+/* Panel Styles */
+.panel-text {
+  padding-left: 25%;
+  padding-right: 25%;
+}
+@media screen and (max-width: 600px) {
+  .panel-text {
+    padding:0;
+  }
+}
