Updated Team Page!
Our new team page for the 2023-24 year :P

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1387,6 +1387,9 @@ section {
   border-radius: 4px;
   overflow: hidden;
 }
+.tmpSize {
+  height: 500px !important;
+}
 .team .member img {
   transition: all ease-in-out 0.4s;
 }
