--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1391,6 +1391,8 @@ section {
   height: 500px !important;
 }
 .team .member img {
+  width: 100%;
+  object-fit: cover;
   transition: all ease-in-out 0.4s;
 }
 .team .member:hover img {
