added events section with swiper

--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -1144,6 +1144,11 @@ section {
   width: 20%;
 }
 
+#events .swiper-button-prev,
+#events .swiper-button-next {
+  color:white;
+}
+
 /*--------------------------------------------------------------
 # News
 --------------------------------------------------------------*/
