added publicity section

--- a/client/src/assets/css/index.css
+++ b/client/src/assets/css/index.css
@@ -1259,6 +1259,10 @@ section {
   color: white;
 }
 
+#news .swiper-pagination {
+  color: black;
+}
+
 .testimonials {
   padding: 80px 0;
   background-position: center center;
